--- a/backend/src/templates/index.html
+++ b/backend/src/templates/index.html
@@ -4,10 +4,6 @@
 <!-- <script src="{{ url_for('static',filename='js/index_fluff.js') }}?u={{ last_updated }}"></script> -->
 <link rel="canonical" href="https://www.pdf2flashcards.com" />
 <meta name="google-site-verification" content="3Q-06zBt5OdyGsO-K5KTUa3gsM3Xz56QLXTSQGDZpoY" />
-<script>
-    const card_connected = ("{{ session.card_connected }}".toLowerCase() === "true")
-    const logged_in = ("{{ session.logged_in }}".toLowerCase() === "true")
-</script>
 {% endblock %} {% block body %}
 <div>
     <div class="center-horizontally center-inside-elems">
@@ -34,12 +30,13 @@
 
         {% if session.logged_in %}
         {% if session.card_connected %}
-        <p class="center-text">Pricing: First 10 pages free, then 2¢ per page.</p>
+        <p class="center-text">Pricing: First 10 results free, then 2¢ per result.</p>
         {% else %}
-        <p>Free accounts can only upload 10 pages. <a href="/profile">Upgrade</a> for more.</p>
+        <p class="center-text">Free accounts can only view up to 10 results. <a href="/profile">Upgrade</a> for more.
+        </p>
         {% endif %}
         {% else %}
-        <p>Guests can only upload 3 pages. <a href="/register">Register</a> for more</p>
+        <p class="center-text">Guests can only view up to 5 results. <a href="/register">Register</a> for more</p>
         {% endif %}
         <div class="convert-region center-inside-elems">
             <ul>
