Improve GPT output & increase number of results generated

--- a/backend/src/templates/results.html
+++ b/backend/src/templates/results.html
@@ -40,7 +40,7 @@
             <button class="button-1">AI Chat Tool</button>
         </div>
         <p class="results-select-prompt" style="text-align: center;">Select a document from the list on the left to view
-            a file.</p>
+            a file.<br><br>Please note: Generation can take up to serveral minutes.</p>
         <div class="results-output"></div>
     </div>
 </div>
