--- a/backend/src/static/css/profile.css
+++ b/backend/src/static/css/profile.css
@@ -8,7 +8,7 @@
 
 .profile-container {
   padding: 16px;
-  border: 6px ridge var(--gradient-4);
+  border: 1px solid var(--gradient-4);
   border-radius: 8px;
   background-color: var(--gradient-2);
   width: fit-content;
