--- a/backend/src/templates/flashcard.html
+++ b/backend/src/templates/flashcard.html
@@ -1,6 +1,6 @@
 <div class="flashcard">
     <div class="flashcard-child flashcard-top">
-        <div class="flashcard-flip"><img src="{{ url_for('static', filename='img/rotate-icon-white.png') }}" /></div>
+        <div class="flashcard-flip"></div>
     </div>
     <div class="flashcard-child flashcard-middle">
         <div class="flashcard-arrow-btn flashcard-back"><i class="arrow left"></i></div>
