--- a/backend/src/templates/results.html
+++ b/backend/src/templates/results.html
@@ -12,36 +12,43 @@
 </script>
 {% endblock %}
 {% block body %}
-<div class="results-layout">
-    <div class="results-files">
+<div class="results-body">
+    <div class="results-files" id="scrollbar2">
         <div class="results-files-header">
-            <h2>Documents</h2>
+            <h1>Documents</h1>
         </div>
         <div class="results-flashcards">
-            <p><b>Flashcards:</b></p>
+            <hr>
+            <h3><b>Flashcards</b></h3>
             <ul>
             </ul>
         </div>
         <div class="results-keywords">
-            <p><b>Keyword/Definition:</b></p>
+            <hr>
+            <h3><b>Keyword/Definition</b></h3>
             <ul>
             </ul>
         </div>
         <div class="results-test">
-            <p><b>Test/Quiz:</b></p>
+            <hr>
+            <h3><b>Test/Quiz</b></h3>
             <ul>
             </ul>
         </div>
     </div>
-    <div style="width: 100%;">
+    <div class="results-right">
         <div class="results-options" style="display: none;">
-            <button class="button-1" onclick="remove_document()">Remove</button>
-            <button class="button-1" onclick="on_export_click()">Export</button>
-            <button class="button-1">AI Chat Tool</button>
+            <h3 class="document-title center-text" style="font-size: 180%;"></h3>
+            <div style="display:flex; justify-content: center;">
+                <button class="button-1" onclick="remove_document()">Remove</button>
+                <button class="button-1" onclick="on_export_click()">Export</button>
+                <button class="button-1">AI Chat Tool</button>
+            </div>
         </div>
-        <p class="results-select-prompt" style="text-align: center;">Select a document from the list on the left to view
+        <p class="results-select-prompt" style="text-align: center;">Select a document from the list on the left to
+            view
             a file.<br><br>Please note: Generation can take up to serveral minutes.</p>
-        <div class="results-output"></div>
+        <div class="results-output" id="scrollbar2"></div>
     </div>
 </div>
 
