--- a/backend/src/templates/index.html
+++ b/backend/src/templates/index.html
@@ -2,13 +2,12 @@
 {% block head %}
 <script src="{{ url_for('static',filename='js/index.js') }}?u={{ last_updated }}"></script>
 <!-- <script src="{{ url_for('static',filename='js/index_fluff.js') }}?u={{ last_updated }}"></script> -->
-<link rel="canonical" href="https://www.pdf2flashcards.com" />
 <meta name="google-site-verification" content="3Q-06zBt5OdyGsO-K5KTUa3gsM3Xz56QLXTSQGDZpoY" />
 {% endblock %} {% block body %}
 <div>
     <div class="center-horizontally center-inside-elems">
-        <h1 class="center-text" style="margin-bottom: 0; font-size: 60px;">PDF-2-Flashcards</h1>
-        <h2 class="center-text">Generate flashcards, test questions, and more</h2>
+        <h1 class="center-text" style="margin-bottom: 0; font-size: 60px;">Exam Generator</h1>
+        <h2 class="center-text">Create exams & quizzes from documents</h2>
     </div>
 </div>
 <div class="upload-content">
