--- a/backend/src/templates/results.html
+++ b/backend/src/templates/results.html
@@ -4,11 +4,11 @@
 <script>
     const single_item_cost = parseFloat("{{ single_item_cost }}")
     let user_type = "paid"
-    if (!card_connected && logged_in) {
+    /*if (!card_connected && logged_in) {
         user_type = "free"
     } else if (!logged_in) {
         user_type = "guest"
-    }
+    }*/
 </script>
 {% endblock %}
 {% block body %}
